5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4143/executions/1585_1017.log
== SUBMITION (2019-03-26 11:10:35) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*

t1 = radians(float(input("Latitude de P1:")))
g2 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("Latitude de P2:")))
g2 = radians(float(input("Longitude de P2:")))

r = float(6371.01)
d = r*acos((sin(ti))*sin(t2) + cos(t1) * cos(t2) * cos(g1-g2)
print(round(d,2))
-- EXECUTION TIME:
0.191462
-- ERROR:
  File "/home/codebench/codes/1585/1017/main.py", line 13
    print(round(d,2))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:10:48) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*

t1 = radians(float(input("Latitude de P1:")))
g2 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("Latitude de P2:")))
g2 = radians(float(input("Longitude de P2:")))

r = float(6371.01)
d = r*acos((sin(ti))*sin(t2) + cos(t1) * cos(t2) * cos(g1-g2))
print(round(d,2))
-- EXECUTION TIME:
0.180976
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/1017/main.py", line 12, in <module>
    d = r*acos((sin(ti))*sin(t2) + cos(t1) * cos(t2) * cos(g1-g2))
NameError: name 'ti' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:11:23) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*

t1 = radians(float(input("Latitude de P1:")))
g2 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("Latitude de P2:")))
g2 = radians(float(input("Longitude de P2:")))

r = float(6371.01)
d = r*acos((sin(ti)*sin(t2)) + cos(t1) * cos(t2) * cos(g1-g2))
print(round(d,2))
-- EXECUTION TIME:
0.173195
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/1017/main.py", line 12, in <module>
    d = r*acos((sin(ti)*sin(t2)) + cos(t1) * cos(t2) * cos(g1-g2))
NameError: name 'ti' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:11:45) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*

t1 = radians(float(input("Latitude de P1:")))
g2 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("Latitude de P2:")))
g2 = radians(float(input("Longitude de P2:")))

r = float(6371.01)
d = r*acos((sin(ti)*sin(t2)) + cos(t1) * cos(t2) * cos(g1-g2))
print(round(d, 2))
-- EXECUTION TIME:
0.164162
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/1017/main.py", line 12, in <module>
    d = r*acos((sin(ti)*sin(t2)) + cos(t1) * cos(t2) * cos(g1-g2))
NameError: name 'ti' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:16:20) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*

t1 = radians(float(input("Latitude de P1:")))
g2 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("Latitude de P2:")))
g2 = radians(float(input("Longitude de P2:")))

r = float(6371.01)
d = r*acos((sin(ti)*sin(t2)) + cos(t1) * cos(t2) * cos(g1-g2))

print(round(d, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    d = r*acos((sin(ti)*sin(t2)) + cos(t1) * cos(t2) * cos(g1-g2))
NameError: name 'ti' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:17:07) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*

t1 = radians(float(input("Latitude de P1:")))
g2 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("Latitude de P2:")))
g2 = radians(float(input("Longitude de P2:")))

r = float(6371.01)
d = r*acos((sin(t1)*sin(t2)) + cos(t1) * cos(t2) * cos(g1-g2))

print(round(d, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    d = r*acos((sin(t1)*sin(t2)) + cos(t1) * cos(t2) * cos(g1-g2))
NameError: name 'g1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:18:01) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*

t1 = radians(float(input("Latitude de P1:")))
g2 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("Latitude de P2:")))
g2 = radians(float(input("Longitude de P2:")))

r = float(6371.01)
d = r*acos((sin(t1)*sin(t2)) + cos(t1) * cos(t2) * cos(g1-g2)))

print(round(d, 2))
-- EXECUTION TIME:
0.132054
-- ERROR:
  File "/home/codebench/codes/1585/1017/main.py", line 12
    d = r*acos((sin(t1)*sin(t2)) + cos(t1) * cos(t2) * cos(g1-g2)))
                                                                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:18:27) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*

t1 = radians(float(input("Latitude de P1:")))
g2 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("Latitude de P2:")))
g2 = radians(float(input("Longitude de P2:")))

r = (6371.01)
d = r*acos((sin(t1)*sin(t2)) + cos(t1) * cos(t2) * cos(g1-g2)))

print(round(d, 2))
-- EXECUTION TIME:
0.192089
-- ERROR:
  File "/home/codebench/codes/1585/1017/main.py", line 12
    d = r*acos((sin(t1)*sin(t2)) + cos(t1) * cos(t2) * cos(g1-g2)))
                                                                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:18:37) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*

t1 = radians(float(input("Latitude de P1:")))
g2 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("Latitude de P2:")))
g2 = radians(float(input("Longitude de P2:")))

r = 6371.01
d = r*acos((sin(t1)*sin(t2)) + cos(t1) * cos(t2) * cos(g1-g2)))

print(round(d, 2))
-- EXECUTION TIME:
0.178059
-- ERROR:
  File "/home/codebench/codes/1585/1017/main.py", line 12
    d = r*acos((sin(t1)*sin(t2)) + cos(t1) * cos(t2) * cos(g1-g2)))
                                                                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:18:46) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*

t1 = radians(float(input("Latitude de P1:")))
g2 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("Latitude de P2:")))
g2 = radians(float(input("Longitude de P2:")))

r = 6371.01
d = r*acos((sin(t1)*sin(t2) + cos(t1) * cos(t2) * cos(g1-g2)))

print(round(d, 2))
-- EXECUTION TIME:
0.197439
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/1017/main.py", line 12, in <module>
    d = r*acos((sin(t1)*sin(t2) + cos(t1) * cos(t2) * cos(g1-g2)))
NameError: name 'g1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:18:51) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*

t1 = radians(float(input("Latitude de P1:")))
g2 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("Latitude de P2:")))
g2 = radians(float(input("Longitude de P2:")))

r = 6371.01
d = r*acos((sin(t1)*sin(t2) + cos(t1) * cos(t2) * cos(g1-g2))

print(round(d, 2))
-- EXECUTION TIME:
0.116083
-- ERROR:
  File "/home/codebench/codes/1585/1017/main.py", line 14
    print(round(d, 2))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:18:54) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*

t1 = radians(float(input("Latitude de P1:")))
g2 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("Latitude de P2:")))
g2 = radians(float(input("Longitude de P2:")))

r = 6371.01
d = r*acos((sin(t1)*sin(t2) + cos(t1) * cos(t2) * cos(g1-g2))

print(round(d, 2))
-- EXECUTION TIME:
0.208383
-- ERROR:
  File "/home/codebench/codes/1585/1017/main.py", line 14
    print(round(d, 2))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:18:56) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*

t1 = radians(float(input("Latitude de P1:")))
g2 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("Latitude de P2:")))
g2 = radians(float(input("Longitude de P2:")))

r = 6371.01
d = r*acos((sin(t1)*sin(t2) + cos(t1) * cos(t2) * cos(g1-g2))

print(round(d, 2))
-- ERROR:
File "XXXX", line 14
    print(round(d, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:19:14) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*

t1 = radians(float(input("Latitude de P1:")))
g2 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("Latitude de P2:")))
g2 = radians(float(input("Longitude de P2:")))

r = 6371.01
d = r*acos((sin(t1)*sin(t2) + cos(t1) * cos(t2) * cos(g1-g2)))
			  
			  
			  
			  
			  
			  
			  
			  
			  
			  
			  
			  
			  
			  
			  
			  
			  
			  
			  
			  

print(round(d, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    d = r*acos((sin(t1)*sin(t2) + cos(t1) * cos(t2) * cos(g1-g2)))
NameError: name 'g1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:19:48) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*

t1 = radians(float(input("Latitude de P1:")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("Latitude de P2:")))
g2 = radians(float(input("Longitude de P2:")))

r = 6371.01
d = r*acos((sin(t1)*sin(t2) + cos(t1) * cos(t2) * cos(g1-g2)))
			  
			  
			  
			  
			  
			  
			  
			  
			  
			  
			  
			  
			  
			  
			  
			  
			  
			  
			  
			  

print(round(d, 2))
-- EXECUTION TIME:
0.174234
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.44
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
